# robot_lab

source/robot_lab/data/Robots/self_dog_urdf/: CMakeLists.txt  package.xml
source/robot_lab/data/Robots/self_dog_urdf/config/: robot_control.yaml
source/robot_lab/data/Robots/self_dog_urdf/launch/: display.launch  gazebo.launch  njust_v2_fixed_urdf_gazebo.launch  njust_v2_fixed_urdf_rviz.launch  njust_v2_fixed_xacro_gazbeo.launch  njust_v2_fixed_xacro_rviz.launch
source/robot_lab/data/Robots/self_dog_urdf/meshes/: FL_calf.STL  FL_hip.STL  FL_thigh.STL  FL_wheel.STL  FR_calf.STL  FR_hip.STL  FR_thigh.STL  FR_wheel.STL  RL_calf.STL  RL_hip.STL  RL_thigh.STL  RL_wheel.STL  RR_calf.STL  RR_hip.STL  RR_thigh.STL  RR_wheel.STL  base_link.STL
source/robot_lab/data/Robots/self_dog_urdf/urdf/: njust_v2_fixed.urdf  njust_v2_wheel.urdf
source/robot_lab/data/Robots/self_dog_urdf/xacro/: const.xacro  gazebo.xacro  leg.xacro  robot.xacro  transmission.xacro
source/robot_lab/robot_lab/assets/: self_dog.py
source/robot_lab/robot_lab/tasks/locomotion/velocity/config/wheeled/self_dog/: __init__.py  flat_env_cfg.py  jump_env_cfg.py  rough_env_cfg.py
source/robot_lab/robot_lab/tasks/locomotion/velocity/config/wheeled/self_dog/agents/: rsl_rl_ppo_cfg.py
source/robot_lab/robot_lab/tasks/locomotion/velocity/config/wheeled/unitree_go2w/: rough_env_cfg.py
source/robot_lab/robot_lab/tasks/locomotion/velocity/config/wheeled/unitree_go2w/agents/: rsl_rl_ppo_cfg.py
