<?xml version="1.0"?>
<package format="2">
    <name>njust_v2_fixed_description</name>
    <version>0.0.0</version>
    <description>The njust_v2_fixed_description package</description>

    <maintainer email="972463872@qq.com">Zhou Shichao</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
